@@ -1,26 +1,9 @@
 PositionDodge <- proto(Position, {
-  
-  width <- NULL
-  new <- function(., width=NULL) {
-    .$proto(width=width)
-  }
-  
   adjust <- function(., data, scales) {
     if (nrow(data) == 0) return()
     check_required_aesthetics("x", names(data), "position_dodge")
     
-    if (is.null(data$width)) data$width <- resolution(data$x) * 0.9
-    maxwidth <- if (!is.null(.$width))  .$width else max(data$width)
-    maxn <- max(tapply(data$x, data$x, length))
-    dodge <- function(data) {
-      transform(data, 
-        x = x + (1:nrow(data) - (maxn + 1) / 2) * (maxwidth/maxn) ,
-        width = width / maxn
-      )
-    }
-    
-    xs <- split(data, data$x)
-    do.call("rbind.fill", lapply(xs, dodge))
+    collide(data, .$width, .$my_name(), dodge)
   }  
 
   objname <- "dodge"
@@ -39,6 +22,7 @@ PositionDodge <- proto(Position, {
     p <- qplot(x, y, data=df, position="dodge", geom="bar", stat="identity")
     p 
     p + geom_linerange(aes(ymin= y - 1, ymax = y+1), position="dodge")
+
     # Dodging things with different widths is tricky
     p + geom_errorbar(aes(ymin= y - 1, ymax = y+1), width=0.2, position="dodge")
     # You can specify the width to use for dodging (instead of the actual
@@ -46,3 +30,4 @@ PositionDodge <- proto(Position, {
     p + geom_errorbar(aes(ymin= y - 1, ymax = y+1, width=0.2), position=position_dodge(width=0.90))
   }
 })
+
